--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,6 +115,7 @@
     "streambuf": "cpp",
     "text_encoding": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "cstring": "cpp"
   }
 }
