--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,6 +116,7 @@
     "text_encoding": "cpp",
     "typeinfo": "cpp",
     "variant": "cpp",
-    "cstring": "cpp"
+    "cstring": "cpp",
+    "set": "cpp"
   }
 }
